--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Aldri | Portofolio</title>
   </head>
-  <body class="bg-teal-950 text-white">
+  <body class="bg-emerald-950 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
