--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Aldri | Portofolio</title>
+    <title>Aldri | Portfolio</title>
   </head>
   <body class="bg-emerald-950 text-white">
     <div id="root"></div>
